--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,7 +29,7 @@ $toolbar-gradient: 'glossy';
 @include sencha-form;
 @include sencha-msgbox;
 
-
+@include sencha-button-ui('decline', #bc3314, 'matte');
 
 // Your custom code goes here...
 @include pictos-iconmask('home');
@@ -37,4 +37,11 @@ $toolbar-gradient: 'glossy';
 	.x-body {
 		background-color: rgba(43,45,44, 0.2);
 	}
+}
+
+.x-list-header {
+	background-image: -webkit-linear-gradient(top, #ccff7c, #c3f171 3%, #a7ca72) !important;
+	text-shadow: none !important;
+	border-top: 1px solid #c3f171 !important;
+	border-bottom: 1px solid #85ad43 !important;
 }
